# typety

./: .gitignore  .readthedocs.yaml  .replit  README.md  changelog.rst  conf.py  index.rst  pyproject.toml  test.py
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/.doctrees/docs/: About.doctree  about.doctree
_build/_sources/: index.rst.txt
_build/_sources/docs/: About.rst.txt
_build/docs/: About.html  about.html
docs/: about.rst  help.rst  requirements.txt
typetydocs/: modules.rst  typety.rst
